@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-14T16:20:53Z",
+  "timestamp" : "2023-08-15T08:21:20Z",
   "count_outdated" : 468,
   "uniques_outdated" : 218,
-  "count" : 478,
-  "uniques" : 224,
+  "count" : 479,
+  "uniques" : 225,
   "clones" : [
     {
       "timestamp": "2023-08-01T00:00:00Z",
@@ -55,6 +55,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
