@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 11,
   "uniques": 2,
   "clones": [
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2023-08-14T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
