@@ -1,3 +1,12 @@
+2023-08-15T08:21:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5865103499 # 700
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
+* notice: last 14d: unq all: 2 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 218 468 / 224 478
+* notice: next accum: outdated-unq outdated-all / unq all: 218 468 / 225 479
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-15]
+
 2023-08-14T16:20:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5858112483 # 698
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-14
